Feat!: Dolar Average implemented
