# gen/models/dolar_average.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// DolarAverage dolar average
+//
+// swagger:model DolarAverage
+type DolarAverage struct {
+
+	// dolar paralelo
+	DolarParalelo float64 `json:"dolar_paralelo,omitempty"`
+
+	// referencias
+	Referencias []*DolarPrice `json:"referencias"`
+}
+
+// Validate validates this dolar average
+func (m *DolarAverage) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateReferencias(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DolarAverage) validateReferencias(formats strfmt.Registry) error {
+	if swag.IsZero(m.Referencias) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Referencias); i++ {
+		if swag.IsZero(m.Referencias[i]) { // not required
+			continue
+		}
+
+		if m.Referencias[i] != nil {
+			if err := m.Referencias[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("referencias" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("referencias" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this dolar average based on the context it is used
+func (m *DolarAverage) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateReferencias(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *DolarAverage) contextValidateReferencias(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Referencias); i++ {
+
+		if m.Referencias[i] != nil {
+			if err := m.Referencias[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("referencias" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("referencias" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DolarAverage) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DolarAverage) UnmarshalBinary(b []byte) error {
+	var res DolarAverage
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
