# gen/restapi/operations/dolar/get_dolar_average_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package dolar
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/rootspyro/Dollar-VzlAPI/gen/models"
+)
+
+// GetDolarAverageOKCode is the HTTP code returned for type GetDolarAverageOK
+const GetDolarAverageOKCode int = 200
+
+/*
+GetDolarAverageOK OK
+
+swagger:response getDolarAverageOK
+*/
+type GetDolarAverageOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.DolarAverageResponse `json:"body,omitempty"`
+}
+
+// NewGetDolarAverageOK creates GetDolarAverageOK with default headers values
+func NewGetDolarAverageOK() *GetDolarAverageOK {
+
+	return &GetDolarAverageOK{}
+}
+
+// WithPayload adds the payload to the get dolar average o k response
+func (o *GetDolarAverageOK) WithPayload(payload *models.DolarAverageResponse) *GetDolarAverageOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get dolar average o k response
+func (o *GetDolarAverageOK) SetPayload(payload *models.DolarAverageResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetDolarAverageOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+GetDolarAverageDefault respuesta generica
+
+swagger:response getDolarAverageDefault
+*/
+type GetDolarAverageDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Default `json:"body,omitempty"`
+}
+
+// NewGetDolarAverageDefault creates GetDolarAverageDefault with default headers values
+func NewGetDolarAverageDefault(code int) *GetDolarAverageDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetDolarAverageDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get dolar average default response
+func (o *GetDolarAverageDefault) WithStatusCode(code int) *GetDolarAverageDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get dolar average default response
+func (o *GetDolarAverageDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get dolar average default response
+func (o *GetDolarAverageDefault) WithPayload(payload *models.Default) *GetDolarAverageDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get dolar average default response
+func (o *GetDolarAverageDefault) SetPayload(payload *models.Default) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetDolarAverageDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
